Correcion de errores y añadió la ventana modal pro

--- a/src/index.css
+++ b/src/index.css
@@ -94,7 +94,7 @@ background-color:var(--yellow) ;
 
 .container__pokemons_container {
     width: 42vh;
-    height: 60vh;
+    height: 62vh;
     margin: 3.4vh auto;
     color: #FFF;
     font-size: 3.4vh;
@@ -102,6 +102,8 @@ background-color:var(--yellow) ;
     flex-direction: column;
     align-items: center;
 }
+
+
 .container__pokemons{
     background-color: var(--lightblue);
     border: 1px solid rgb(255, 255, 255);
@@ -301,17 +303,23 @@ background-color:var(--yellow) ;
 }
 
 .modal-info {
-    width: 120vh;
-    height: 35vh;
+    width: 130vh;
+    height: 38vh;
     background-color: rgb(57, 57, 57);
     border-radius: 2vh;
     margin-bottom: 1vh;
     margin-left: 6vh;
     display: flex;
-    flex-direction: column;
-    justify-content: center ;
-    align-items: baseline;
+    justify-content: flex-start;
+    flex-direction: row;
     animation: modalInfo-data 0.9s ease 0s 1 normal forwards;
+}
+
+.modal-info-data {
+    width: 35vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .modal__container {
@@ -329,6 +337,7 @@ background-color:var(--yellow) ;
     border-radius: 20px;
     color: black;
     margin-right: 0.5vh;
+    text-transform: uppercase;
 }
 
 .modal__container--info {
@@ -337,6 +346,67 @@ background-color:var(--yellow) ;
     border: 2px solid rgb(57, 57, 57);
     background-color: rgb(57, 57, 57);
     border-radius: 5px;
+}
+
+.pregressbar__container {
+    margin-left: 2vh;
+    height: 3vh;
+    width: 42vh;
+    background-color: #e0e0de;
+    border-radius: 2vh;
+    margin: 0.2vh
+  }
+
+.pregressbar__container__filler {
+    height: 100%;
+    background-color: #0bff48;
+    border-radius: inherit;
+    text-align: right;
+  }
+
+.pregressbar__container__filler-label {
+    padding: 5;
+    color: rgb(0, 0, 0);
+    font-weight: 'bold';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.modal__progress-bar {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+}
+ 
+.modal__total {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #00aeff;
+    color: black;
+    font-weight: bold;
+    border: 1vh solid white;
+    border-radius: 100%;
+    width: 25vh ;
+    height: 25vh ;
+    margin-top: auto ;
+    margin-bottom: auto ;
+    margin-left: auto ;
+    margin-right: auto;
+}
+
+.modal__total-title {
+    text-decoration: underline;
+    margin: auto;
+}
+
+.modal__total-number {
+    color: rgb(255, 255, 255);
+    font: 8vh sans-serif;
+    margin: auto;
 }
 
 @keyframes myAnimExit {
